...
          child: Column(
            crossAxisAlignment: CrossAxisAlignment.center,
            children: [
              const Logo(),
              const Text(
                'Workout Dashboard',
                key: ValueKey('dashboard'),
                style: TextStyle(
                  color: AppColors.primary,
                  fontSize: 24,
                  fontWeight: FontWeight.bold,
                ),
              ),
...
                        Navigator.of(context).push(
                          MaterialPageRoute(builder: (_) {
                            return const WorkOutScreen();
                          }),
                        );
                      }),
                      key: const ValueKey('add_new_button'),
                      child: Container(
                        width: 120,
                        height: 120,
                        alignment: Alignment.center,
                        decoration: BoxDecoration(
                          shape: BoxShape.circle,
...
