...
                'Workout Listing',
                style: TextStyle(
                  color: AppColors.primary,
                  fontSize: 20,
                  fontWeight: FontWeight.bold,
                ),
                key: ValueKey('view_listing_screen'),
              ),
              _workoutList == null || _workoutList!.isEmpty
                  ? Container(
                      margin: const EdgeInsets.only(top: 60),
                      height: MediaQuery.of(context).size.height * 1,
                      child: Column(
...
